--- a/src/styles/pages/newexerciseform.scss
+++ b/src/styles/pages/newexerciseform.scss
@@ -1,17 +1,32 @@
-.new-exercise-form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.exercise-page-container {
+  .exercise-form {
+    .new-exercise-form-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-  .new-exercise-form {
-    border: solid 1px blue;
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+      .new-exercise-form {
+        border: solid 1px blue;
+        width: 30vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-    input {
-      width: 200px;
+        input {
+          width: 200px;
+        }
+      }
+    }
+  }
+
+  .existing-exercises {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 60px;
+    gap: 20px;
+
+    .exercise-wrapper {
+      border: solid 1px black;
     }
   }
 }
