--- a/src/styles/pages/newgymform.scss
+++ b/src/styles/pages/newgymform.scss
@@ -1,18 +1,32 @@
-.new-gym-form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.gym-page-container {
+  .gym-form {
+    .new-gym-form-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-  .new-gym-form {
-    border: solid 1px blue;
-    width: 30vw;
+      .new-gym-form {
+        border: solid 1px blue;
+        width: 30vw;
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        input {
+          width: 200px;
+        }
+      }
+    }
+  }
+  .existing-gyms {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 60px;
     gap: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-    input {
-      width: 200px;
+    .gym-wrapper {
+      border: solid 1px black;
     }
   }
 }
