--- a/src/styles/pages/newuserform.scss
+++ b/src/styles/pages/newuserform.scss
@@ -1,17 +1,34 @@
-.new-user-form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .new-user-form {
-    border: solid 1px blue;
-    width: 30vw;
+.user-page-container {
+  .new-user-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    input {
-      width: 200px;
+    .new-user-form {
+      border: solid 1px blue;
+      width: 30vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      input {
+        width: fit;
+      }
+    }
+  }
+
+  .existing-users {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 60px;
+    gap: 20px;
+
+    .user-wrapper {
+      border: solid 1px black;
+
+      input {
+        width: fit-content;
+      }
     }
   }
 }
