--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,10 +5,11 @@
 @import "./navigation/header.scss";
 @import "./navigation/footer.scss";
 
-@import "./pages/loginform.scss";
 @import "./pages/newworkoutform.scss";
 @import "./pages/newgymform.scss";
 @import "./pages/newexerciseform.scss";
 @import "./pages/newuserform.scss";
 
 @import "./custom-components/myworkoutcards.scss";
+@import "./custom-components/loginform.scss";
+@import "./custom-components/createaccount.scss";
