adds real styling

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,7 @@
 @import "./navigation/header.scss";
 @import "./navigation/footer.scss";
 
+@import "./pages/landingpage.scss";
 @import "./pages/newworkoutform.scss";
 @import "./pages/newgymform.scss";
 @import "./pages/newexerciseform.scss";
