--- a/src/styles/pages/newgymform.scss
+++ b/src/styles/pages/newgymform.scss
@@ -5,20 +5,39 @@
       flex-direction: column;
       align-items: center;
 
+      .page-title {
+        background-color: $tab-links;
+        width: 20%;
+        margin: 30px;
+        padding: 20px;
+        font-size: x-large;
+        border-radius: 10px;
+        align-self: flex-start;
+      }
+
       .new-gym-form {
-        border: solid 1px blue;
+        border: solid 2px $tab-links;
+        border-radius: 10px;
+        padding: 10px;
         width: 30vw;
-        gap: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: gray;
 
         input {
           width: 200px;
         }
+
+        button {
+          margin-top: 10px;
+          padding: 10px;
+          border-radius: 10px;
+        }
       }
     }
   }
+
   .existing-gyms {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -26,7 +45,17 @@
     gap: 20px;
 
     .gym-wrapper {
-      border: solid 1px black;
+      display: flex;
+      flex-direction: column;
+      border: solid 2px $tab-links;
+      padding: 10px;
+      background-color: gray;
+      border-radius: 10px;
+      width: 90%;
+
+      button {
+        width: fit-content;
+      }
     }
   }
 }
