--- a/src/styles/custom-components/loginform.scss
+++ b/src/styles/custom-components/loginform.scss
@@ -1,5 +1,31 @@
-.login-form-wrapper {
+.login-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+
+  .login-form-wrapper {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    padding: 20px 0 20px 0;
+    gap: 20px;
+    background-color: gray;
+    border-radius: 10px;
+    color: $tab-links;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+
+      button {
+        padding: 10px;
+        border-radius: 10px;
+        text-decoration: none;
+        border: 2px solid $tab-links;
+      }
+    }
+  }
 }
