--- a/src/styles/pages/newexerciseform.scss
+++ b/src/styles/pages/newexerciseform.scss
@@ -5,12 +5,25 @@
       flex-direction: column;
       align-items: center;
 
+      .page-title {
+        background-color: $tab-links;
+        width: 20%;
+        margin: 30px;
+        padding: 20px;
+        font-size: x-large;
+        border-radius: 10px;
+        align-self: flex-start;
+      }
+
       .new-exercise-form {
-        border: solid 1px blue;
+        border: solid 2px $tab-links;
+        border-radius: 10px;
+        padding: 10px;
         width: 30vw;
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: gray;
 
         input {
           width: 200px;
@@ -26,7 +39,17 @@
     gap: 20px;
 
     .exercise-wrapper {
-      border: solid 1px black;
+      display: flex;
+      flex-direction: column;
+      border: solid 2px $tab-links;
+      padding: 10px;
+      background-color: gray;
+      border-radius: 10px;
+      width: 90%;
+
+      button {
+        width: fit-content;
+      }
     }
   }
 }
