--- a/src/styles/pages/newuserform.scss
+++ b/src/styles/pages/newuserform.scss
@@ -4,15 +4,28 @@
     flex-direction: column;
     align-items: center;
 
+    .page-title {
+      background-color: $tab-links;
+      width: 20%;
+      margin: 30px;
+      padding: 20px;
+      font-size: x-large;
+      border-radius: 10px;
+      align-self: flex-start;
+    }
+
     .new-user-form {
-      border: solid 1px blue;
+      border: solid 2px $tab-links;
+      border-radius: 10px;
+      padding: 10px;
       width: 30vw;
       display: flex;
       flex-direction: column;
       align-items: center;
+      background-color: gray;
 
       input {
-        width: fit;
+        width: fit-content;
       }
     }
   }
@@ -24,9 +37,19 @@
     gap: 20px;
 
     .user-wrapper {
-      border: solid 1px black;
+      display: flex;
+      flex-direction: column;
+      border: solid 2px $tab-links;
+      padding: 10px;
+      background-color: gray;
+      border-radius: 10px;
+      width: 90%;
 
       input {
+        width: fit-content;
+      }
+
+      button {
         width: fit-content;
       }
     }
