--- a/src/styles/pages/newworkoutform.scss
+++ b/src/styles/pages/newworkoutform.scss
@@ -3,15 +3,34 @@
   flex-direction: column;
   align-items: center;
 
+  .page-title {
+    background-color: $tab-links;
+    width: 20%;
+    margin: 30px;
+    padding: 20px;
+    font-size: x-large;
+    border-radius: 10px;
+    align-self: flex-start;
+  }
+
   .new-workout-form {
-    border: solid 1px blue;
+    border: solid 2px $tab-links;
+    border-radius: 10px;
+    padding: 10px;
     width: 30vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: gray;
 
     input {
       width: 200px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 10px;
     }
   }
 }
