--- a/src/styles/navigation/header.scss
+++ b/src/styles/navigation/header.scss
@@ -19,6 +19,12 @@
       padding: 5px;
       border-left: solid 1px $tab-links;
       border-right: solid 1px $tab-links;
+      &:hover {
+        background-color: lightgray;
+        color: gray;
+        border-radius: 10px;
+        border: 3px solid $tab-links;
+      }
     }
 
     button {
