--- a/src/styles/custom-components/loginform.scss
+++ b/src/styles/custom-components/loginform.scss
@@ -10,7 +10,7 @@
     margin-top: 50px;
     padding: 20px 0 20px 0;
     gap: 20px;
-    background-color: gray;
+    background-color: $card-background;
     border-radius: 10px;
     color: $tab-links;
 
@@ -25,6 +25,11 @@
         border-radius: 10px;
         text-decoration: none;
         border: 2px solid $tab-links;
+
+        &:hover {
+          background-color: $tab-links;
+          cursor: pointer;
+        }
       }
     }
   }
