--- a/src/styles/pages/landingpage.scss
+++ b/src/styles/pages/landingpage.scss
@@ -7,7 +7,7 @@
 
   .landing-page-wrapper {
     width: 50%;
-    background-color: gray;
+    background-color: $card-background;
     display: flex;
     flex-direction: column;
     align-items: center;
