--- a/src/styles/pages/newexerciseform.scss
+++ b/src/styles/pages/newexerciseform.scss
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: gray;
+        background-color: $card-background;
 
         input {
           width: 200px;
@@ -43,7 +43,7 @@
       flex-direction: column;
       border: solid 2px $tab-links;
       padding: 10px;
-      background-color: gray;
+      background-color: $card-background;
       border-radius: 10px;
       width: 90%;
 
