--- a/src/styles/pages/newuserform.scss
+++ b/src/styles/pages/newuserform.scss
@@ -22,7 +22,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: gray;
+      background-color: $card-background;
 
       input {
         width: fit-content;
@@ -41,7 +41,7 @@
       flex-direction: column;
       border: solid 2px $tab-links;
       padding: 10px;
-      background-color: gray;
+      background-color: $card-background;
       border-radius: 10px;
       width: 90%;
 
