--- a/src/styles/pages/newworkoutform.scss
+++ b/src/styles/pages/newworkoutform.scss
@@ -21,16 +21,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: gray;
+    background-color: $card-background;
 
-    input {
-      width: 200px;
+    div {
+      display: flex;
+      flex-direction: column;
+
+      input {
+        width: 200px;
+        background-color: lightgrey;
+        padding: 5px 5px 5px 10px;
+        margin: 5px 0 5px 0;
+        border-radius: 10px;
+        border: none;
+      }
     }
 
     button {
       margin-top: 10px;
       padding: 10px;
       border-radius: 10px;
+      border: none;
+
+      &:hover {
+        background-color: $tab-links;
+      }
     }
   }
 }
