--- a/src/styles/navigation/header.scss
+++ b/src/styles/navigation/header.scss
@@ -1,12 +1,15 @@
 .header-container {
   background-color: $nav-background;
+  width: 100%;
   min-height: 10vh;
+  top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: fixed;
 
   .header-wrapper {
     width: 75%;
