--- a/src/styles/navigation/footer.scss
+++ b/src/styles/navigation/footer.scss
@@ -1,7 +1,7 @@
 .footer-container {
   // margin-top: 310px;
   width: 100%;
-  height: 55px;
+  height: 75px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -10,4 +10,13 @@
   background-color: $nav-background;
   color: $tab-links;
   font-size: x-large;
+
+  .footer-link {
+    z-index: 1;
+    // margin-bottom: 250px;
+    color: $tab-links;
+    // padding: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+  }
 }
